<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_rotation"
        android:icon="@drawable/icon_rotation"
        android:title="@string/title_rotation" />

    <item
        android:id="@+id/navigation_wheel"
        android:icon="@drawable/icon_wheel"
        android:title="@string/title_wheel" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/icon_shop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/icon_review"
        android:title="@string/title_review" />
</menu>